Update environment variables for production deployment
- Updated .env.example with deployed backend URL
- Updated .env to point to https://urlshortener-bxac.onrender.com
- Backend health check confirmed working
- Ready for frontend deployment

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@
 VITE_API_URL=http://localhost:3001
 
 # For production deployment, update to your actual backend URL:
-# VITE_API_URL=https://your-backend-app.onrender.com
+VITE_API_URL=https://urlshortener-bxac.onrender.com
