--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Frontend Environment Variables
 
-# API Base URL - pointing to local development
-VITE_API_URL=http://localhost:3001
+# API Base URL - pointing to your deployed backend
+VITE_API_URL=https://urlshortener-bxac.onrender.com
